ajout article vase fleur

--- a/magasin.html
+++ b/magasin.html
@@ -82,7 +82,7 @@ margin: 0;
 
         <table style="background-color: rgba(223,139,49, 0.75); display: inline-block; margin: auto">
             <tr>
-                <td style="border: solid; border-color:saddlebrown;width: 10em; height: 10em; "><input type="image" src="image/magasin/vase_fleurs.png"  alt="vase avec des fleurs" id="vase" value="1" onclick="quest('vase')"><br>1 pièce</td>
+                <td style="border: solid; border-color:saddlebrown;width: 10em; height: 10em; "><input type="image" src="image/magasin/vase_fleurs.png"  alt="vase avec des fleurs" id="vase_fleurs" value="1" onclick="quest('vase_fleurs')"><br>1 pièce</td>
                 <td style="border: solid; border-color:saddlebrown;width: 10em; height: 10em;"><input type="image" src="image/magasin/porte.png" alt="porte" id="porte" value="5" onclick="quest('porte')"><br>5 pièces</td>
                 <td style="border: solid; border-color:saddlebrown;width: 10em; height: 10em;"><input type="image" src="image/magasin/fenetre.png"  alt="fenetre" id="fenetre" value="5" onclick="quest('fenetre')"><br>5 pièces</td>
                 <td style="border: solid; border-color:saddlebrown;width: 10em; height: 10em;"><input type="image" src="image/magasin/fenetre_droite.png"  alt="fenetre à droite" id="fenetre_droite" value="10" onclick="quest('fenetre_droite')"><br>10 pièces</td>
