--- a/demandeEnregistrement_importer.html
+++ b/demandeEnregistrement_importer.html
@@ -3,6 +3,7 @@
 <head>
     <title>My Bakey _ caisse</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="chargement_elements.css">
 
 </head>
 <style>
@@ -37,6 +38,19 @@
 
 </style>
 <body>
+
+<p style="padding-top: 50%;position: absolute; top: 0; width:100%;height: 100%;">
+    Tourne l'écran dans l'autre sens
+</p>
+<div class="preload">
+    <img src="image/chat.png" alt="avion" class="avion">
+    <h3>Chargement de My Bakery...</h3>
+</div>
+<section>
+    <script src="charger.js"></script>
+
+
+
 <div id="txt">
 Ton ancienne partie va être supprimée. <br>
     Veux-tu la télécharger?<br>
@@ -85,6 +99,7 @@ Ton ancienne partie va être supprimée. <br>
         document.body.removeChild(element);
     }
 </script>
+</section>
 </body>
 <style>
     .bulle {
