--- a/exterieur.html
+++ b/exterieur.html
@@ -29,13 +29,8 @@ margin: 0;
 
     <img src="image/paysage_exterieur.png" style=" position: absolute; top: 0; width:100%;height: 100%;">
     <div class="dropdown" style="float: left; position: absolute">
-        <button onclick="myFunction()" class="dropbtn" style="color:#555555;background-color: orange; padding:0.5em 1em 0.5em 1em; font-size: 2em; border-radius: 1em">MENU</button>
-        <div id="myDropdown" class="dropdown-content">
-            <a href="./index.html">Menu principal</a>
-            <a href="#" id="dwn-btn">Sauvegarder ma partie</a>
-            <a href="supprimer_joueur.html">Supprimer ma partie</a>
-            <a href="demandeEnregistrement_importer.html" id="seco" >Importer une partie</a>
-        </div>
+        <button onclick="location='index.html'" class="dropbtn" style="color:#555555;background-color: orange; padding:0.5em 1em 0.5em 1em; font-size: 2em; border-radius: 1em">MENU</button>
+
     </div>
     <script>/* When the user clicks on the button,
 toggle between hiding and showing the dropdown content */
