--- a/init.html
+++ b/init.html
@@ -9,6 +9,8 @@
     <meta name="author" content="Eloïse DELHOMELLE">
     <meta name="description" content="TD2">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
+    <link rel="stylesheet" href="chargement_elements.css">
+
 </head>
 <script>
     /*var myAudio = document.createElement("audio");
@@ -17,6 +19,16 @@
     //myAudio.pause();
 </script>
 <body>
+<p style="padding-top: 50%;position: absolute; top: 0; width:100%;height: 100%;">
+    Tourne l'écran dans l'autre sens
+</p>
+<div class="preload">
+    <img src="image/chat.png" alt="avion" class="avion">
+    <h3>Chargement de My Bakery...</h3>
+</div>
+<section>
+    <script src="charger.js"></script>
+
 
 
 <!--<audio controls="controls" autoplay >
@@ -87,6 +99,7 @@ right:67px;
 
     }, false);
 </script>
+</section>
 </body>
     <style>
     .bulle {
