--- a/init2.html
+++ b/init2.html
@@ -9,16 +9,30 @@
     <meta name="author" content="Eloïse DELHOMELLE">
     <meta name="description" content="TD2">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
+    <link rel="stylesheet" href="chargement_elements.css">
+
 </head>
 
 <body>
-<input type="button" value="MENU PRINCIPAL" hidden id="menupcp" style="color:#333333;background-color: orange; padding:0.5em 1em 0.5em 1em; font-size: 2em; border-radius: 1em">
+<p style="padding-top: 50%;position: absolute; top: 0; width:100%;height: 100%;">
+    Tourne l'écran dans l'autre sens
+</p>
+
+
+<div class="preload">
+    <img src="image/chat.png" alt="avion" class="avion">
+    <h3>Chargement de My Bakery...</h3>
+</div>
+<section>
+    <script src="charger.js"></script>
+
+    <input type="button" value="MENU PRINCIPAL" hidden id="menupcp" style="color:#333333;background-color: orange; padding:0.5em 1em 0.5em 1em; font-size: 2em; border-radius: 1em">
 <div style="display: block; margin : auto;margin-bottom:0.5em;text-align: center; font-size: 5em; font-weight: 1000; text-shadow: -1px -1px white, 1px 1px #333;  color: orangered ">MY BAKERY</div>
 <div id="body_bky">
-    <a href="debut_jeu.html" style="display: block; width : 20em; margin : auto;margin-bottom: 0.5em;text-align: center; padding:1em 0.5em 1em 0.5em; font-size: 2em; border-radius: 30px; background-color: orangered; text-decoration: none; color: #333333" >REPRENDRE MA PARTIE</a>
-    <a href="telechargement_json_config_joueur.html" style="display: block; width : 20em; margin : auto;margin-bottom: 0.5em;text-align: center; padding:1em 0.5em 1em 0.5em; font-size: 2em; border-radius: 30px; background-color: orangered; text-decoration: none; color: #333333" >ENREGISTRER MA PARTIE</a>
-    <a href="demandeEnregistrement_creer.html" style="display: block; width : 20em; margin : auto;margin-bottom: 0.5em;text-align: center; padding:1em 0.5em 1em 0.5em; font-size: 2em; border-radius: 30px; background-color: orangered; text-decoration: none; color: #333333" >NOUVELLE PARTIE</a>
-    <a href="supprimer_joueur.html" style="display: block; width : 20em; margin : auto;margin-bottom: 0.5em;text-align: center; padding:1em 0.5em 1em 0.5em; font-size: 2em; border-radius: 30px; background-color: orangered; text-decoration: none; color: #333333" >IMPORTER UNE PARTIE</a>
+    <a href="debut_jeu.html" style="display: block; width : 20em; margin : auto;margin-bottom: 2%;text-align: center; padding:1em 0.5em 1em 0.5em; font-size: 1.5em; border-radius: 30px; background-color: orangered; text-decoration: none; color: #333333" >REPRENDRE MA PARTIE</a>
+    <a href="telechargement_json_config_joueur.html" style="display: block; width : 20em; margin : auto;margin-bottom: 2%;text-align: center; padding:1em 0.5em 1em 0.5em; font-size: 1.5em; border-radius: 30px; background-color: orangered; text-decoration: none; color: #333333" >ENREGISTRER MA PARTIE</a>
+    <a href="demandeEnregistrement_creer.html" style="display: block; width : 20em; margin : auto;margin-bottom: 2%;text-align: center; padding:1em 0.5em 1em 0.5em; font-size: 1.5em; border-radius: 30px; background-color: orangered; text-decoration: none; color: #333333" >NOUVELLE PARTIE</a>
+    <a href="supprimer_joueur.html" style="display: block; width : 20em; margin : auto;margin-bottom: 2%;text-align: center; padding:1em 0.5em 1em 0.5em; font-size: 1.5em; border-radius: 30px; background-color: orangered; text-decoration: none; color: #333333" >IMPORTER UNE PARTIE</a>
 
 </div>
 <div class="survol">
@@ -78,6 +92,7 @@ right:67px;
 
 
 </script>
+</section>
 </body>
 <style>
     .bulle {
