--- a/recuperer_compte.html
+++ b/recuperer_compte.html
@@ -1,4 +1,28 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Ma boulangerie</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="boulangerie.css" />
+    <!--    <script type="text/javascript" src="./boulangerie.js"> </script>-->
+    <meta name="author" content="Eloïse DELHOMELLE">
+    <meta name="description" content="TD2">
+    <meta name="keywords" content="HTML,CSS,XML,JavaScript">
+    <link rel="stylesheet" href="chargement_elements.css">
+
+</head>
+
 <body style="background-image: url('./image/fond_boulangerie.png')">
+<p style="padding-top: 50%;position: absolute; top: 0; width:100%;height: 100%;">
+    Tourne l'écran dans l'autre sens
+</p>
+<div class="preload">
+    <img src="image/chat.png" alt="avion" class="avion">
+    <h3>Chargement de My Bakery...</h3>
+</div>
+<section>
+    <script src="charger.js"></script>
 <input type="file" style="font-size: 3em; background-color: orangered; color: #555555; padding: 2em; display: block; margin: auto; margin-top: 15%">
 
 <script>
@@ -44,5 +68,5 @@
     }
 
 
-</script>
-</body>
+</script></section>
+</body></html>
